# webserv

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  nginx.sh  nginx_start.sh  webserv.conf
.github/workflows/: c-cpp.yml
config/: Config.cpp  Config.hpp  IConfig.hpp
configs/: basic.conf  basic.txt  basic_with_comments.conf  eval.conf  eval_wrong.conf  invalid.conf  invalid2.conf  invalid3.conf  no_rights.conf  test.conf  webserv.conf
logger/: ILogger.hpp  Logger.cpp  Logger.hpp  LoggerMock.cpp  LoggerMock.hpp  Option.hpp  Options.cpp  Options.hpp  test.sh
server/: IServer.hpp  Option.hpp  Server.cpp  Server.hpp  test.sh
srcs/: main.cpp
srcs/config/: Config.cpp  Config.hpp  IConfig.hpp  Lexer.cpp  Lexer.hpp  test.cpp  test.sh
srcs/config/tests/: parser_test.cpp
srcs/logger/: ILogger.hpp  Logger.cpp  Logger.hpp  Options.cpp  Options.hpp  test.sh
srcs/server/: ClientEvent.cpp  ClientEvent.hpp  Event.hpp  EventManager.cpp  EventManager.hpp  IServer.hpp  Options.cpp  Options.hpp  PollFds.cpp  PollFds.hpp  Server.cpp  Server.hpp  test.sh
srcs/server/http/: CGIHandler.cpp  CGIHandler.hpp  ErrorPageHandler.cpp  ErrorPageHandler.hpp  FileServerHandler.cpp  FileServerHandler.hpp  HeaderHandler.cpp  HeaderHandler.hpp  IHandler.hpp  Request.cpp  Request.hpp  RequestParser.cpp  RequestParser.hpp  Response.cpp  Response.hpp  ResponseUtilities.hpp  ReturnHandler.cpp  ReturnHandler.hpp  ServerMux.cpp  ServerMux.hpp  SimpleHandler.hpp  SimpleHanlder.hpp  VirtualServer.cpp  VirtualServer.hpp
srcs/utils/: utils.cpp  utils.hpp
www/: index.html
www/cgi-bin/: env.pl  hello_post.pl  hello_python.py  hello_world.pl
www/data/: alert.html  simple_get_form.html  simple_post_form.html
www/utopia/: index.html
www/utopia/js/: acc.js  active.js  burger-menu.js  modal.js
www/utopia/scss/: style.css  style.css.map  style.scss
www/utopia/scss/blocks/: _about.scss  _adv.scss  _benefits.scss  _faq.scss  _footer.scss  _header.scss  _modal.scss  _popup.scss  _problems.scss  _rating.scss  _tools.scss
www/utopia/scss/utils/: _fonts.scss  _general.scss  (+2 more)
